Findbugs and new release packaging