@@ -328,7 +328,7 @@ public class LatitudeTest extends TestCase {
    }
 
    public void testEquals_failDifferentParentClass() {
-      assertFalse( lat1.equals(new Integer(2)) );
+      assertFalse( lat1.equals(Integer.valueOf(2)) );
    }
 
    public void testEquals_failDifferentSiblingClass()
